// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preprocessor removes previous lifecycles but keeps new 1`] = `
{
  "dev": [
    "eslint",
  ],
  "files": [
    {
      "allowChanges": false,
    },
  ],
}
`;

exports[`preprocessor removes previous lifecycles when false found 1`] = `
{
  "files": [
    {
      "allowChanges": false,
    },
  ],
}
`;

exports[`preprocessor removes previous lifecycles with no config 1`] = `
{
  "dev": [
    "eslint",
  ],
  "files": [
    {
      "allowChanges": false,
    },
  ],
}
`;

exports[`preprocessor removes removes lifecycle with no config 1`] = `
{
  "files": [
    {
      "allowChanges": false,
    },
  ],
}
`;
